js clean up, adding sounds and adding documentation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="Js/ControlPanel.js"></script>
         
         <script type="text/javascript" src="Js/Map.js"></script>
-        <script type="text/javascript" src="Js/ki.js"></script>
+        <script type="text/javascript" src="Js/Ai.js"></script>
         
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
