Control-Panel - renaming and littlebit performance

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </ul>
             
             <ul id="unit-status">
-                <li class="ammo">
+                <li class="ammo hide">
                     <span>Ammo:&nbsp;</span>
                     <div class="total-ammo"><div class="current-ammo"></div></div>
                 </li>
-                <li class="weapon"></li>
-                <li class="actionPoints">
+                <li class="weapon hide"></li>
+                <li class="actionPoints hide">
                     <span>Action Points:&nbsp;</span>
                     <div class="total-actionPoints"><div class="current-actionPoints"></div></div>
                 </li>
