--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <script type="text/javascript" src="js/Map.js"></script>
         <script type="text/javascript" src="js/Ai.js"></script>
+        <script type="text/javascript" src="js/Status.js"></script>
         
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
