add audio player and play sounds if unit acting

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <link rel="stylesheet" type="text/css" href="css/actionPanel.css" />
     </head>
     <body>
-        <audio autoplay="autoplay" id="sound" src="" >
-        Your browser does not support the audio element.
+        <audio autoplay="autoplay" id="js-sound-unit" src="" >
+            Your browser does not support the audio element.
+        </audio>
+
+        <audio autoplay="autoplay" id="js-sound-enemy" src="" >
+            Your browser does not support the audio element.
         </audio>
 
         <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
