add defense tower and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             mapView,
             menuView;
 
+        console.log = function() {};
+
         window.onload = function () {
             menuView = new MenuView({
                 model: new MenuModel()
