--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="css/unit.css" />
         <link rel="stylesheet" type="text/css" href="css/obstacle.css" />
         <link rel="stylesheet" type="text/css" href="css/actionPanel.css" />
+        <link rel="stylesheet" type="text/css" href="css/inventory.css" />
     </head>
     <body>
         <audio autoplay="autoplay" id="js-sound-unit" src="" >
@@ -27,11 +28,15 @@
         <script type="text/javascript" src="js/modules/actionPanel/model/ActionPanelModel.js"></script>
         <script type="text/javascript" src="js/modules/actionPanel/view/ActionPanelView.js"></script>
 
+        <script type="text/javascript" src="js/modules/inventory/model/InventoryModel.js"></script>
+        <script type="text/javascript" src="js/modules/inventory/view/AbstractInventoryItemView.js"></script>
+        <script type="text/javascript" src="js/modules/inventory/view/MedipackView.js"></script>
         <script type="text/javascript" src="js/modules/unit/model/UnitModel.js"></script>
         <script type="text/javascript" src="js/modules/obstacle/model/ObstacleModel.js"></script>
 
         <script type="text/javascript" src="js/modules/map/model/UnitCollection.js"></script>
         <script type="text/javascript" src="js/modules/map/model/ObstacleCollection.js"></script>
+        <script type="text/javascript" src="js/modules/map/model/InventoryCollection.js"></script>
 
         <script type="text/javascript" src="js/modules/weapon/model/WeaponModel.js"></script>
         <script type="text/javascript" src="js/modules/weapon/view/MachineGunView.js"></script>
