MapViewClass refactoring - bugfixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="js/modules/actionPanel/model/ActionPanelModel.js"></script>
         <script type="text/javascript" src="js/modules/actionPanel/view/ActionPanelView.js"></script>
 
-        <script type="text/javascript" src="js/modules/inventory/model/InventoryModel.js"></script>
+        <script type="text/javascript" src="js/modules/inventory/model/InventoryItemModel.js"></script>
         <script type="text/javascript" src="js/modules/inventory/view/AbstractInventoryItemView.js"></script>
         <script type="text/javascript" src="js/modules/inventory/view/MedipackView.js"></script>
         <script type="text/javascript" src="js/modules/unit/model/UnitModel.js"></script>
@@ -64,7 +64,7 @@
             mapView,
             menuView;
 
-//        console.log = function() {};
+        console.log = function() {};
 
         window.onload = function () {
             menuView = new MenuView({
