extend the build.xml

--- a/live_index.html
+++ b/live_index.html
@@ -5,7 +5,7 @@
         <title>War-Time</title>
         <script type="text/javascript" src="jquery.js"></script>
         <script type="text/javascript" src="astar.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/concated.css" />
+        <link rel="stylesheet" type="text/css" href="css/hva.css" />
     </head>
     <body>
         <audio autoplay="autoplay" id="js-sound-unit" src="" >
