--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             mapView,
             menuView;
 
-        //console.log = function() {};
+        console.log = function() {};
 
         window.onload = function () {
             menuView = new MenuView({
